src/objects/TR1__Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>AWR_Days__c</fullName>
        <label>AWR Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accrual_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Week_Ending_Date__c</fullName>
        <label>Actual Week Ending Date</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Date__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Timesheet_Detail__c.Is_Populated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Approver__c</fullName>
        <formula>TR1__Approver__c+&apos;;&apos;+TR1__Timesheet_Second_Approver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By_new__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arroved_by__c</fullName>
        <formula>TR1__Approver__r.FirstName  &amp; &quot;&quot; &amp;  TR1__Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved by (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Pay_Per_Day__c</fullName>
        <formula>Total_Reported_Pay__c / Total_Reported_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Pay Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmed__c</fullName>
        <formula>TR1__Closing_Report__r.Booking_Confirmed__c</formula>
        <label>Booking Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_New_TR__c</fullName>
        <formula>TEXT(TR1__Closing_Report__r.TR1__Job_Credit__r.Branch__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch New TR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>TR1__Closing_Report__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Work</label>
        <referenceTo>Bundle_Work__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_First_Name__c</fullName>
        <formula>TR1__Consultant__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_1__c</fullName>
        <formula>TR1__Closing_Report__r.Maximum_Day_Charge_Rate__c</formula>
        <label>Charge Rate 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_2__c</fullName>
        <formula>TR1__Closing_Report__r.Maximum_Half_Day_Charge_Rate__c</formula>
        <label>Charge Rate 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_3__c</fullName>
        <formula>TR1__Closing_Report__r.Maximum_Hour_Charge_Rate__c</formula>
        <label>Charge Rate 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_account_number__c</fullName>
        <formula>TR1__Client__r.Account_Code_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client account number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Day__c</fullName>
        <formula>CASE( MOD(  DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Day (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Equals_Week_End_Date_Hidden__c</fullName>
        <formula>If( DATEVALUE( CreatedDate ) &gt;=  TR1__Week_Ending__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Equals Wk End Date (Hidden)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>TR1__Gross_Profit__c /  Total_Reported_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_by_Day__c</fullName>
        <formula>(TR1__Gross_Profit__c) /  (Total_Reported_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin by Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JobOwnerId__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JobOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Owner_Email__c</fullName>
        <label>Job Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Margin_PAYE__c</fullName>
        <formula>CASE( TR1__Consultant__r.Tax_Method__c, 
&quot;PAYE&quot;, 
(Total_Reported_Charge__c -( Total_Reported_Pay__c  * 1.095)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin - PAYE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Umbrella__c</fullName>
        <formula>CASE(  TR1__Consultant__r.Tax_Method__c, 
&quot;Umbrella&quot;, ( Total_Reported_Charge__c ) -( Total_Reported_Pay__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin - Umbrella</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Message_to_Job_Owner__c</fullName>
        <label>Message to Job Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Temp_Time_Sheet_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Old Temp Time Sheet ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_number__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_1__c</fullName>
        <formula>TR1__Closing_Report__r.Maximum_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Rate 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_2__c</fullName>
        <formula>TR1__Closing_Report__r.Maximum_Half_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Rate 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_3__c</fullName>
        <formula>TR1__Closing_Report__r.Maximum_Hour_Pay_Rate__c</formula>
        <label>Pay Rate 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Type_1__c</fullName>
        <formula>IF( 
NOT(Total_Days__c = 0), 
100,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Type 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Type_2__c</fullName>
        <formula>IF( 
NOT(Total_Half_Days__c = 0), 
101,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Type 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Type_3__c</fullName>
        <formula>IF( 
NOT(TR1__Total_Regular_Hours__c  = 0), 
105,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Type 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payroll_number__c</fullName>
        <formula>TR1__Consultant__r.Payroll_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payroll number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Quality_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Quality Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shift_End_Date__c</fullName>
        <label>Shift End Date</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Date__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Timesheet_Detail__c.Units_Populated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Adjusted_Bill_Rate__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Adjusted_Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Adjusted_Gross_Profit__c</fullName>
        <formula>IF( $Setup.TR1__TalentRoverProperties__c.TR1__Use_Override_Amt_Fields_for_GP_Invoices__c ,  

(TR1__Gross_Profit__c * $Setup.TR1__AdjustedGrossProfit__c.TR1__GrossProfitPercent__c)
, 

((((+ TR1__Adjusted_Bill_Rate__c - TR1__Pay_Rate__c )* TR1__Total_Regular_Hours__c )+((( TR1__Adjusted_Bill_Rate__c * TR1__Closing_Report__r.TR1__OT_Bill_Rate_Multiplier_Percentage__c )-( TR1__Pay_Rate__c *1.5))* TR1__Total_Overtime_Hours__c )+((( TR1__Adjusted_Bill_Rate__c * TR1__Closing_Report__r.TR1__DT_Bill_Rate_Multiplier_Percentage__c )-( TR1__Pay_Rate__c *2))* TR1__Total_Double_Time_Hours__c )- TR1__Burden__c)*$Setup.TR1__AdjustedGrossProfit__c.TR1__GrossProfitPercent__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Administrative_Fee_Amount__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Administrative_Fee_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administrative Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Approver_First_Name__c</fullName>
        <formula>TR1__Approver__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Approver_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TimesheetToApprove</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Timesheets (Timesheet Approver)</relationshipLabel>
        <relationshipName>Timesheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Approvers_Notes__c</fullName>
        <inlineHelpText>Visible to approver and payroll.</inlineHelpText>
        <label>Approver Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Assignment_Continuing__c</fullName>
        <label>Assignment Continuing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Bill_Rate__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Bonus__c</fullName>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Burden__c</fullName>
        <label>Burden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_AGP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Candidate_Percentage__c *  TR1__Adjusted_Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate AGP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Credit_Id__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Candidate_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Credit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Candidate_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Candidate_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_GP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Candidate_Percentage__c *  TR1__Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Client_Name__c</fullName>
        <formula>TR1__Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Consultant_Email__c</fullName>
        <formula>TR1__Consultant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Consultant_Name__c</fullName>
        <formula>TR1__Consultant__r.LastName &amp; &quot;, &quot; &amp;  TR1__Consultant__r.FirstName</formula>
        <label>Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Consultants_Notes__c</fullName>
        <inlineHelpText>Visible to everyone.</inlineHelpText>
        <label>Consultant Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__DT_Bill_Rate__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__DT_Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Division__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Gross_Profit__c</fullName>
        <formula>IF( $Setup.TR1__TalentRoverProperties__c.TR1__Use_Rate_Card_Module__c,
TR1__TotalShiftBillAmount__c - TR1__Total_Shift_Fee__c - TR1__TotalShiftPayAmount__c ,
IF( $Setup.TR1__TalentRoverProperties__c.TR1__Use_Override_Amt_Fields_for_GP_Invoices__c , 

(TR1__Timesheet_Invoice_Total__c -  TR1__Payroll_Amount__c - TR1__Burden__c)

, 

(((TR1__Adjusted_Bill_Rate__c - TR1__Pay_Rate__c )* TR1__Total_Regular_Hours__c )+((( TR1__Adjusted_Bill_Rate__c *  TR1__Closing_Report__r.TR1__OT_Bill_Rate_Multiplier_Percentage__c  )-( TR1__Pay_Rate__c *1.5))* TR1__Total_Overtime_Hours__c )+((( TR1__Adjusted_Bill_Rate__c *  TR1__Closing_Report__r.TR1__DT_Bill_Rate_Multiplier_Percentage__c  )-( TR1__Pay_Rate__c *2))* TR1__Total_Double_Time_Hours__c )-  TR1__Burden__c)

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Invoice_Amount__c</fullName>
        <formula>IF( 

AND( $Setup.TR1__TalentRoverProperties__c.TR1__Use_Override_Amt_Fields_for_GP_Invoices__c, TR1__Total_Bill_Override__c != 0) ,

TR1__Total_Bill_Override__c, 

((ROUND(TR1__Adjusted_Bill_Rate__c, 2) * TR1__Total_Regular_Hours__c) + (TR1__OT_Bill_Rate__c * TR1__Total_Overtime_Hours__c) + (TR1__Travel_Bill_Rate__c * TR1__Total_Travel_Hours__c) + (TR1__Total_Double_Time_Hours__c * TR1__DT_Bill_Rate__c))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job_AGP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Percentage__c *  TR1__Adjusted_Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job AGP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Credit_Id__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Credit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Job_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_GP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Percentage__c *  TR1__Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Order__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Owner_Email__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Credit__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Owner__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Job_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Manual_Total_Regular_Hours__c</fullName>
        <label>Manual Total Regular Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_AGP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Marketing_Percentage__c *  TR1__Adjusted_Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing AGP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_Credit_Id__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Marketing_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Marketing_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Marketing_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_GP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Marketing_Percentage__c *  TR1__Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__OT_Bill_Rate__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__OT_Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_AGP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other2_Percentage__c *   TR1__Adjusted_Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 AGP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_Credit_Id__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other2_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 Credit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other2_Credit__r.FirstName &amp; &quot; &quot; &amp; TR1__Closing_Report__r.TR1__Other2_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_GP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other2_Percentage__c *  TR1__Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other_AGP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other_Percentage__c *  TR1__Adjusted_Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other AGP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Credit_Id__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Other_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Other_GP__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other_Percentage__c *  TR1__Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Pay_Rate__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Pay_Week_Ending__c</fullName>
        <label>Pay Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Payroll_Amount__c</fullName>
        <formula>IF( 

AND( $Setup.TR1__TalentRoverProperties__c.TR1__Use_Override_Amt_Fields_for_GP_Invoices__c, TR1__Total_Pay_Override__c &gt; 0) , 

TR1__Total_Pay_Override__c, 


((TR1__Pay_Rate__c * TR1__Total_Regular_Hours__c)
+
((TR1__Pay_Rate__c * 1.5) * TR1__Total_Overtime_Hours__c)
+
((TR1__Pay_Rate__c * 2.0) * TR1__Total_Double_Time_Hours__c))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payroll Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Payroll_Note__c</fullName>
        <inlineHelpText>Visible to consultant and approver.</inlineHelpText>
        <label>Payroll Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Payroll_Type__c</fullName>
        <formula>TEXT (TR1__Closing_Report__r.TR1__Payroll_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payroll Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Changed By Payroll</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Unsubmitted</fullName>
                    <default>true</default>
                    <label>Unsubmitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Approver_Email__c</fullName>
        <formula>TR1__Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Copy__c</fullName>
        <formula>TEXT (TR1__Closing_Report__r.TR1__Timesheet_Copy__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Invoice_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Timesheet Invoice Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Invoice_Total__c</fullName>
        <formula>TR1__Invoice_Amount__c  -  TR1__Timesheet_Invoice_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Second_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Second Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Timesheets (Timesheet Second Approver)</relationshipLabel>
        <relationshipName>SecondApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Type__c</fullName>
        <formula>TEXT ( TR1__Closing_Report__r.TR1__Timesheet_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TotalShiftBillAmount__c</fullName>
        <label>Total Shift Bill Amount</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__TotalShiftBillAmount__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__TotalShiftPayAmount__c</fullName>
        <label>Total Shift Pay Amount</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__TotalShiftPayAmount__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__TotalShiftUnits__c</fullName>
        <label>Total Shift Units</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__TotalShiftUnits__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Bill_Override__c</fullName>
        <label>Total Bill (Override)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Days_Worked__c</fullName>
        <label>Total Days Worked</label>
        <summaryFilterItems>
            <field>TR1__Timesheet_Detail__c.TR1__Regular_Hours__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Double_Time_Hours__c</fullName>
        <label>Total Double Time Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Double_Time_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>